Options Page: Fix Contrast options

--- a/ColorContrast/inc/CSS/popup.css
+++ b/ColorContrast/inc/CSS/popup.css
@@ -55,7 +55,7 @@ h1 span {
   float: inherit;
   display: inline-block;
 } 
-.example img {
+.example .btn {
   float:right;
   padding:5px;
   -webkit-filter: drop-shadow(4px 4px 8px white);
@@ -133,7 +133,7 @@ h1 span {
   opacity:0.5;
 }
 
-#fixSamples img:hover {
+#fixSamples .btn:hover {
   opacity:1;
 }
 
